add font&about contents

--- a/html/about.html
+++ b/html/about.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/about.css">
     <title>About</title>
+    
+    <script>
+        (function(d) {
+          var config = {
+            kitId: 'aqf5sen',
+            scriptTimeout: 3000,
+            async: true
+          },
+          h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+        })(document);
+      </script>
 </head>
 
 <body>
@@ -35,35 +46,39 @@
             </div>
     
             <div class="text-box">
-                <h2 class="title">初めまして、</h2>
-                <p>ここからいい感じの文章をつらつら書いていくというこ
-                    とです。なんかいい感じにです。ここからいい感じの文章
-                    をつらつら書いていくということです。ここからいい感じ
-                    の文章をつらつら書いていくということです。なんかいい
-                    感じにです。</p>
-                <p>ここからいい感じの文章をつらつら書いていくというこ
-                    とです。なんかいい感じにです。ここからいい感じの文章
-                    をつらつら書いていくということです。ここからいい感じ
-                    の文章をつらつら書いていくということです。なんかいい
-                    感じにです。</p>
-                <p>ここからいい感じの文章をつらつら書いていくというこ
-                    とです。なんかいい感じにです。ここからいい感じの文章
-                    をつらつら書いていくということです。ここからいい感じの文章
-                    をつらつら書いていくということです。</p>    
+                <h2 class="title">初めまして、こんにちは。</h2>
+                <p>奥村彰子(おくむらあきこ)です。あーきちと呼ばれています。
+                    2000年9月24日に生まれました。ミレニアムベイビーです！
+                    名古屋と京都出身、奈良住みです。</p>
+                <p>賀茂川真横の中学校、田んぼに囲まれた商業高校の企画科に
+                    通っていました。現在は、奈良県立大学地域創造学部に所属
+                    しています。まちづくりやコミュニティの勉強をしています。
+                </p>
+                <p>デザインが好きです。イラスト描くことも好きです。写真も撮
+                    りに行きます。日常の心温まる瞬間を撮りたいです。好きな食
+                    べものはハンバーグ。美味しい。47都道府県を回ることが20代
+                    の目標です。誰もが自然といいなと思えるデザインをつくりたい。
+                    2022年の目標は「人生、花なり。」、今日も楽しく元気よく！よろしくお願いします！</p>    
             </div>
         </div>
 
-        <h3>ご連絡は、OOまで!</h3>
+        <h3>ご連絡は、各種SNSのDMにどうぞ！</h3>
         <div class="account">
 
-            <a href="" class="fb"><img src="../img/glyph-logo_May2016.png" alt=""></a>
-            <p>奥村彰子</p>
+            <div class="ac fb">
+            <a href="https://www.facebook.com/akiko.okumura0924"><img src="../img/f_logo_RGB-Blue_100.png" alt=""></a>
+            <p><a href="https://www.facebook.com/akiko.okumura0924" class="insta">facebook 奥村彰子</a></p>
+            </div>
 
-            <a href="" class="insta"><img src="../img/glyph-logo_May2016.png" alt=""></a>
-            <p>@A_kichi0924</p>
+            <div class="ac insta1">
+            <a href="https://www.instagram.com/a_kichi0924/" class="insta"><img src="../img/Instagram_Glyph_Gradient_RGB.png" alt=""></a>
+            <p>Instagram メイン<br><a href="https://www.instagram.com/a_kichi0924/" class="insta">@A_kichi0924</a></p>
+            </div>
 
-            <a href="" class="insta"><img src="../img/glyph-logo_May2016.png" alt=""></a>
-            <p>@cha200a</p>
+            <div class="ac insta2">
+            <a href="https://www.instagram.com/cha2000a/" class="insta"><img src="../img/Instagram_Glyph_Gradient_RGB.png" alt=""></a>
+            <p>Instagram デザイン<br><a href="https://www.instagram.com/cha2000a/" class="insta">@cha200a</a></p>
+            </div>
         </div>
 
     </div>
@@ -82,7 +97,7 @@
              </nav>
         </div>
 
-        <p class="copy">@ここになにかをいれたい</p>
+        <p class="copy">@A-kichi0924 2022.03</p>
 
     </footer>
 
