--- a/html/work.html
+++ b/html/work.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/work.css">
     <title>work</title>
+
+    <script>
+        (function(d) {
+          var config = {
+            kitId: 'aqf5sen',
+            scriptTimeout: 3000,
+            async: true
+          },
+          h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+        })(document);
+      </script>
 </head>
 <body>
     <header>
@@ -55,7 +66,7 @@
              </nav>
         </div>
 
-        <p class="copy">@ここになにかをいれたい</p>
+        <p class="copy">@A-kichi0924 2022.03</p>
 
     </footer>
     
