change work layout

--- a/html/about.html
+++ b/html/about.html
@@ -72,12 +72,12 @@
 
             <div class="ac insta1">
             <a href="https://www.instagram.com/a_kichi0924/" class="insta"><img src="../img/Instagram_Glyph_Gradient_RGB.png" alt=""></a>
-            <p>Instagram メイン<br><a href="https://www.instagram.com/a_kichi0924/" class="insta">@A_kichi0924</a></p>
+            <p>メイン <a href="https://www.instagram.com/a_kichi0924/" class="insta">@A_kichi0924</a></p>
             </div>
 
             <div class="ac insta2">
             <a href="https://www.instagram.com/cha2000a/" class="insta"><img src="../img/Instagram_Glyph_Gradient_RGB.png" alt=""></a>
-            <p>Instagram デザイン<br><a href="https://www.instagram.com/cha2000a/" class="insta">@cha200a</a></p>
+            <p>デザイン <a href="https://www.instagram.com/cha2000a/" class="insta">@cha200a</a></p>
             </div>
         </div>
 
