--- a/html/work.html
+++ b/html/work.html
@@ -37,19 +37,168 @@
     </header>
 
     <div class="wrapper">
+        <nav>
+            <ul>
+                <li><a href="#NEW">NEW</a></li>
+                <li><a href="#WEB">WEBサイト</a></li>
+                <li><a href="#APP">APP</a></li>
+                <li><a href="#OTHERS">OTHERS</a></li>
+            </ul> 
+         </nav>
+
+         <a name="NEW"><hr class="work-border"></a>
 
         <div class="works">
-            <img src="../img/work.png" alt="" id="work-top">
-            <div class="work-all">
-            <img src="../img/work-1.png" alt="" id="work1">
-            <img src="../img/work-1.png" alt="" id="work2">
-            <img src="../img/work-1.png" alt="" id="work3">
-            <img src="../img/work-1.png" alt="" id="work4">
-            <img src="../img/work-1.png" alt="" id="work5">
-            <img src="../img/work-1.png" alt="" id="work6">
+            <img src="../img/work.png" alt="" class="work-img">
+            <div class="text-box">
+            <h2>ゼミ活動</h2>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                とです。なんかいい感じにです。ここからいい感じの文章
+                をつらつら書いていくということです。ここからいい感じ
+                の文章をつらつら書いていくということです。なんかいい
+                感じにです。</p>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                    とです。なんかいい感じにです。ここからいい感じの文章
+                    をつらつら書いていくということです。ここからいい感じ
+                    の文章をつらつら書いていくということです。なんかいい
+                    感じにです。</p>
             </div>
         </div>
 
+        <a name="WEB"><hr class="work-border bd2"></a>
+
+        <div class="works">
+            <img src="../img/work.png" alt="" class="work-img">
+            <div class="text-box">
+            <h2>写真展</h2>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                とです。なんかいい感じにです。ここからいい感じの文章
+                をつらつら書いていくということです。ここからいい感じ
+                の文章をつらつら書いていくということです。なんかいい
+                感じにです。</p>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                    とです。なんかいい感じにです。ここからいい感じの文章
+                    をつらつら書いていくということです。ここからいい感じ
+                    の文章をつらつら書いていくということです。なんかいい
+                    感じにです。</p>
+            </div>
+        </div>
+
+        <hr class="work-border bd3">
+
+        <div class="works">
+            <div class="text-box tx2">
+            <h2>フリーペーパー</h2>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                とです。なんかいい感じにです。ここからいい感じの文章
+                をつらつら書いていくということです。ここからいい感じ
+                の文章をつらつら書いていくということです。なんかいい
+                感じにです。</p>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                    とです。なんかいい感じにです。ここからいい感じの文章
+                    をつらつら書いていくということです。ここからいい感じ
+                    の文章をつらつら書いていくということです。なんかいい
+                    感じにです。</p>
+            </div>
+            <img src="../img/work.png" alt="" class="work-img">
+        </div>
+
+        <hr class="work-border bd3">
+
+        <div class="works">
+            <img src="../img/work.png" alt="" class="work-img">
+            <div class="text-box">
+            <h2>タワーバトル</h2>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                とです。なんかいい感じにです。ここからいい感じの文章
+                をつらつら書いていくということです。ここからいい感じ
+                の文章をつらつら書いていくということです。なんかいい
+                感じにです。</p>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                    とです。なんかいい感じにです。ここからいい感じの文章
+                    をつらつら書いていくということです。ここからいい感じ
+                    の文章をつらつら書いていくということです。なんかいい
+                    感じにです。</p>
+            </div>
+        </div>
+
+        <a name="APP"><hr class="work-border bd2 bd4"></a>
+
+        <div class="works">
+            <img src="../img/work.png" alt="" class="work-img">
+            <div class="text-box">
+            <h2>Wtih Rain</h2>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                とです。なんかいい感じにです。ここからいい感じの文章
+                をつらつら書いていくということです。ここからいい感じ
+                の文章をつらつら書いていくということです。なんかいい
+                感じにです。</p>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                    とです。なんかいい感じにです。ここからいい感じの文章
+                    をつらつら書いていくということです。ここからいい感じ
+                    の文章をつらつら書いていくということです。なんかいい
+                    感じにです。</p>
+            </div>
+        </div>
+
+        <hr class="work-border bd3">
+
+        <div class="works">
+            <div class="text-box tx2">
+            <h2>SAKURA SAKU</h2>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                とです。なんかいい感じにです。ここからいい感じの文章
+                をつらつら書いていくということです。ここからいい感じ
+                の文章をつらつら書いていくということです。なんかいい
+                感じにです。</p>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                    とです。なんかいい感じにです。ここからいい感じの文章
+                    をつらつら書いていくということです。ここからいい感じ
+                    の文章をつらつら書いていくということです。なんかいい
+                    感じにです。</p>
+            </div>
+            <img src="../img/work.png" alt="" class="work-img">
+        </div>
+
+        <a name="OTHERS"></a><hr class="work-border bd2 bd5"></a>
+
+        <div class="works">
+            <img src="../img/work.png" alt="" class="work-img">
+            <div class="text-box">
+            <h2>幸せは日常のなかに</h2>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                とです。なんかいい感じにです。ここからいい感じの文章
+                をつらつら書いていくということです。ここからいい感じ
+                の文章をつらつら書いていくということです。なんかいい
+                感じにです。</p>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                    とです。なんかいい感じにです。ここからいい感じの文章
+                    をつらつら書いていくということです。ここからいい感じ
+                    の文章をつらつら書いていくということです。なんかいい
+                    感じにです。</p>
+            </div>
+        </div>
+
+        <hr class="work-border bd3">
+
+        <div class="works">
+            <div class="text-box tx2">
+            <h2>奈良野菜部</h2>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                とです。なんかいい感じにです。ここからいい感じの文章
+                をつらつら書いていくということです。ここからいい感じ
+                の文章をつらつら書いていくということです。なんかいい
+                感じにです。</p>
+            <p>ここからいい感じの文章をつらつら書いていくというこ
+                    とです。なんかいい感じにです。ここからいい感じの文章
+                    をつらつら書いていくということです。ここからいい感じ
+                    の文章をつらつら書いていくということです。なんかいい
+                    感じにです。</p>
+            </div>
+            <img src="../img/work.png" alt="" class="work-img">
+        </div>
+
+        <h3><a href="https://www.instagram.com/cha2000a/" class="insta">and more ... @cha2000a</a></h3>
     </div>
 
     <footer>
