--- a/html/work.html
+++ b/html/work.html
@@ -51,17 +51,14 @@
         <div class="works">
             <img src="../img/work.png" alt="" class="work-img">
             <div class="text-box">
-            <h2>ゼミ活動</h2>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                とです。なんかいい感じにです。ここからいい感じの文章
-                をつらつら書いていくということです。ここからいい感じ
-                の文章をつらつら書いていくということです。なんかいい
-                感じにです。</p>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                    とです。なんかいい感じにです。ここからいい感じの文章
-                    をつらつら書いていくということです。ここからいい感じ
-                    の文章をつらつら書いていくということです。なんかいい
-                    感じにです。</p>
+            <h2>MiiMo × クイズ＆スタンプラリー</h2>
+            <p>ゼミ活動の一環で、奈良県三宅町の複合施設であるMiiMoのグランドオープンイベントに参加させていただきました。
+                イベントでは班に分かれ企画を行い、我々の班では「三宅町に関するクイズスタンプラリー」と、グローブの端材で作ったレザーボタンを用いた「アートワーク」を実施しました。
+            </p>
+            <p>地域への愛着を深め、特産品であるグローブの端材の活用を提案するため企画し、小さなお子さんを中心に参加いただきました。
+                イベント後にはレザーボタンを使用した「地域通貨」もご提案しました。
+            </p>
+            <p><a href="https://www.nara-np.co.jp/news/20211217214211.html" class="work-link">○ゼミ活動について掲載されました。</a></p>
             </div>
         </div>
 
@@ -70,17 +67,17 @@
         <div class="works">
             <img src="../img/work.png" alt="" class="work-img">
             <div class="text-box">
-            <h2>写真展</h2>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                とです。なんかいい感じにです。ここからいい感じの文章
-                をつらつら書いていくということです。ここからいい感じ
-                の文章をつらつら書いていくということです。なんかいい
-                感じにです。</p>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                    とです。なんかいい感じにです。ここからいい感じの文章
-                    をつらつら書いていくということです。ここからいい感じ
-                    の文章をつらつら書いていくということです。なんかいい
-                    感じにです。</p>
+            <h2>写真展「こころ、ここに。」 
+            </h2>
+            <p>京都にて、共同での写真展を実施し、その企画運営、WEBサイトの制作を行いました。
+                友人と企画したもので、写真とは違った分野で多彩に活躍している共通の友人たちに声をかけ、展示を行いました。
+                それぞれの分野で活躍している人たちが写真という方法で表現するとどんな写真展になるだろうという想いから生まれたものです。
+                「こころ」をうつし、共有する、特別な場になりました。
+            </p>
+            <p>WEBサイトは、撮影者のコメントや写真展の想いを知ることができるコンテンツであり、より写真展を楽しんでもらえるサイトになったのでは、と思っています。
+                友人を中心としてたくさんの方にご来場いただき、新たなコミュニケーションにつながる機会となりました。
+            </p>
+             <p><a href="https://kokoro-kokoni.netlify.app/" class="work-link">○WEBサイトはこちら</a></p>        
             </div>
         </div>
 
@@ -88,17 +85,12 @@
 
         <div class="works">
             <div class="text-box tx2">
-            <h2>フリーペーパー</h2>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                とです。なんかいい感じにです。ここからいい感じの文章
-                をつらつら書いていくということです。ここからいい感じ
-                の文章をつらつら書いていくということです。なんかいい
-                感じにです。</p>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                    とです。なんかいい感じにです。ここからいい感じの文章
-                    をつらつら書いていくということです。ここからいい感じ
-                    の文章をつらつら書いていくということです。なんかいい
-                    感じにです。</p>
+            <h2>フリーペーパー「窓の外から。」</h2>
+            <p>「移住者の目線で、奈良の魅力を発信したい」という友人の思いから作成しました。フリーペーパーとその紹介サイトです。
+                紙、特に本のデザインは初めてで、色や読みやすい組み方など苦戦したものの、奈良で活躍されている方からお褒めの言葉を頂きました。
+            </p>
+            <p>奈良の夕方、優しさや暖かさを意識し、デザインしました。自分達らしい視点で奈良の魅力w引き出せたのではと思っています。</p>
+            <p><a href="https://madonosotokara.com/" class="work-link">○WEBサイトはこちら</a></p>  
             </div>
             <img src="../img/work.png" alt="" class="work-img">
         </div>
@@ -108,17 +100,13 @@
         <div class="works">
             <img src="../img/work.png" alt="" class="work-img">
             <div class="text-box">
-            <h2>タワーバトル</h2>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                とです。なんかいい感じにです。ここからいい感じの文章
-                をつらつら書いていくということです。ここからいい感じ
-                の文章をつらつら書いていくということです。なんかいい
-                感じにです。</p>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                    とです。なんかいい感じにです。ここからいい感じの文章
-                    をつらつら書いていくということです。ここからいい感じ
-                    の文章をつらつら書いていくということです。なんかいい
-                    感じにです。</p>
+            <h2>メンタータワーバトル</h2>
+            <p>大学生メンターも開発を行い中高生に刺激になれば、という思いから作成したゲームサイトです。
+                人気の「動物タワーバトル」を模して「メンター」を積み上げていくゲームとそのLPです。
+            </p>
+            <p>デザインを担当させていただき、クラスが始まる「金曜夜」のイメージとメンターの自由さを意識しました。
+                全体での開発時間がなかなか取れなかったものの、クラス内で対戦したり繰り返し挑戦したりと楽しんでもらえた企画となりました。</p>
+            <p><a href="https://osaka-friday-2021-spring.netlify.app/" class="work-link">○ WEBサイトはこちら</a></p> 
             </div>
         </div>
 
@@ -128,34 +116,27 @@
             <img src="../img/work.png" alt="" class="work-img">
             <div class="text-box">
             <h2>Wtih Rain</h2>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                とです。なんかいい感じにです。ここからいい感じの文章
-                をつらつら書いていくということです。ここからいい感じ
-                の文章をつらつら書いていくということです。なんかいい
-                感じにです。</p>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                    とです。なんかいい感じにです。ここからいい感じの文章
-                    をつらつら書いていくということです。ここからいい感じ
-                    の文章をつらつら書いていくということです。なんかいい
-                    感じにです。</p>
-            </div>
+            <p>Yahoo!JAPAN主催「Open Hack U 2021 Online Vol.2」に参加した際に、制作しました。
+                企画、デザイン担当として二週間の開発に挑みました。
+                指定した地域に雨が降ると花が咲き、タイムカプセルのように思い出を見ることができるというアプリケーションです。
+                写真限定のタイムカプセルに天気と花を掛け合わせました。
+            </p>
+            <p>アプリケーションで「エモい」と思えるものを作りたいという案から製作したもので、不確実で掴めないワクワク感を意識したUIを考えました。</p>
+                    <p><a href="https://docs.google.com/presentation/d/1ljq97EVuNksD-7mobFF4n4oPaKrZnbXKwTNsEAHeeYQ/edit?usp=sharing" class="work-link">○発表スライドはこちら</a></p>
+            </div> 
         </div>
 
         <hr class="work-border bd3">
 
         <div class="works">
             <div class="text-box tx2">
-            <h2>SAKURA SAKU</h2>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                とです。なんかいい感じにです。ここからいい感じの文章
-                をつらつら書いていくということです。ここからいい感じ
-                の文章をつらつら書いていくということです。なんかいい
-                感じにです。</p>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                    とです。なんかいい感じにです。ここからいい感じの文章
-                    をつらつら書いていくということです。ここからいい感じ
-                    の文章をつらつら書いていくということです。なんかいい
-                    感じにです。</p>
+            <h2>Sakura SAKU</h2>
+            <p>「SPAJAM2020 第5回予選大会」 に参加した際に、制作したアプリケーションです。企画、デザイン担当として参加しました。
+                テーマは「季節」、我々のチームは「卒業式」に着目して製作しました。
+                本アプリは、各々の卒業にあたってのメッセージを桜の花に見立て、メッセージが集まれば桜が満開になっていくというものです。
+                寄せ書きでののワクワク感を、デジタルで再現したいという想いからカタチになりました。
+            </p>
+            <p>「優秀賞」を頂くことができ、二日間という短い期間でしたが、チームの力が最大限発揮できたアプリだったと感じています。</p>
             </div>
             <img src="../img/work.png" alt="" class="work-img">
         </div>
@@ -165,17 +146,13 @@
         <div class="works">
             <img src="../img/work.png" alt="" class="work-img">
             <div class="text-box">
-            <h2>幸せは日常のなかに</h2>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                とです。なんかいい感じにです。ここからいい感じの文章
-                をつらつら書いていくということです。ここからいい感じ
-                の文章をつらつら書いていくということです。なんかいい
-                感じにです。</p>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                    とです。なんかいい感じにです。ここからいい感じの文章
-                    をつらつら書いていくということです。ここからいい感じ
-                    の文章をつらつら書いていくということです。なんかいい
-                    感じにです。</p>
+            <h2>幸せは日常のなかに。</h2>
+            <p>コロナ禍で大学生活が途絶えてしまった際、「幸せだと思えるこの瞬間を少しでも残したい」「その幸せを共有したい」と思い、友人と写真アカウントを始めました。
+                大学周辺地域を中心に、奈良での生活の彩りを大切にしています。
+            </p>
+            <p>アカウント運用だけでなく、文化祭での写真展示や撮影企画にも発展し、コミュニケーションのきっかけとなっています。
+                同大学の生徒を中心にフォローして頂いており、「日常について考え、写真を撮るきっかけになった」というお声もありました。</p>
+            <p><a href="https://osaka-friday-2021-spring.netlify.app/" class="work-link">○ Instagramはこちら</a></p>  
             </div>
         </div>
 
@@ -184,16 +161,11 @@
         <div class="works">
             <div class="text-box tx2">
             <h2>奈良野菜部</h2>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                とです。なんかいい感じにです。ここからいい感じの文章
-                をつらつら書いていくということです。ここからいい感じ
-                の文章をつらつら書いていくということです。なんかいい
-                感じにです。</p>
-            <p>ここからいい感じの文章をつらつら書いていくというこ
-                    とです。なんかいい感じにです。ここからいい感じの文章
-                    をつらつら書いていくということです。ここからいい感じ
-                    の文章をつらつら書いていくということです。なんかいい
-                    感じにです。</p>
+            <p>授業の一環で始まった同好会が部活になる際に、制作させていただきました。
+                奈良特産の「大和野菜」を中心に、大学屋上での栽培を目指している部活動です。
+                奈良らしさと緑の生き生きとした様子、そして「野菜」の魅力を発信する大学にとっての新たな風を意識し制作しました。
+            </p>
+            <p>大学に関しては、生徒が制作するオープンキャンパスの大学紹介動画にて、オープニングのロゴモーションを制作させていただくなど、主体的に動く場を提供頂いています。</p>
             </div>
             <img src="../img/work.png" alt="" class="work-img">
         </div>
