--- a/html/work.html
+++ b/html/work.html
@@ -19,6 +19,14 @@
       </script>
 </head>
 <body>
+    <!-- ローディング画面 -->
+    <div id="loading">
+        <div id="loading_barWrap">
+            <p class="text">NOW LOADING</p>
+            <div id="loading_bar"></div>
+        </div>
+    </div>
+    
     <header>
 
         <h3 class="header-left">WORK</h3>
@@ -190,6 +198,6 @@
         <p class="copy">@A-kichi0924 2022.03</p>
 
     </footer>
-    
+    <script type="text/javascript" src="../main.js"></script>
 </body>
 </html>
