--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     
 </head>
 <body>
+  
+  ローディング画面
+<div id="loading">
+    <div id="loading_barWrap">
+        <p class="text">NOW LOADING</p>
+        <div id="loading_bar"></div>
+    </div>
+</div>
+
     <div id="wrapper">
 
       <div class="bl"></div>
@@ -39,5 +48,7 @@
       </div>
 
     </div>
+
+    <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
