--- a/html/about.html
+++ b/html/about.html
@@ -20,6 +20,14 @@
 </head>
 
 <body>
+    <!-- ローディング画面 -->
+    <div id="loading">
+        <div id="loading_barWrap">
+            <p class="text">NOW LOADING</p>
+            <div id="loading_bar"></div>
+        </div>
+    </div>
+    
     <header>
 
         <h3 class="header-left">ABOUT</h3>
@@ -100,6 +108,6 @@
         <p class="copy">@A-kichi0924 2022.03</p>
 
     </footer>
-
+    <script type="text/javascript" src="../main.js"></script>
 </body>
 </html>
