--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   
-  ローディング画面
+  <!-- ローディング画面 -->
 <div id="loading">
     <div id="loading_barWrap">
         <p class="text">NOW LOADING</p>
