--- a/html/about.html
+++ b/html/about.html
@@ -49,8 +49,8 @@
 
         <div class="content1">
             <div class="images">
-                <img src="/img/about.png" alt="">
-                <img src="/img/about.png" alt="">
+                <img src="/img/about01.png" alt="">
+                <img src="/img/about02.png" alt="">
             </div>
     
             <div class="text-box">
